Thu Jul 14 21:03:41 CEST 2011 - Sebastian Siebert <freespacer@gmx.de>
-------------------------------------------------------------------

- rename variables from ATI to AMD

Thu Jun 30 02:35:23 CEST 2011 - Sebastian Siebert <freespacer@gmx.de>
-------------------------------------------------------------------

- add new KMS Configuration for further openSUSE versions (e.g., 12.1)
- rename from ATI to AMD in some scripts
- add symlink /usr/bin/amdconfig to /usr/bin/aticonfig

-------------------------------------------------------------------
Fri Jun 17 22:17:03 CEST 2011 - Sebastian Siebert <freespacer@gmx.de>

- remove the support of openSUSE 11.2

-------------------------------------------------------------------
Thu May 19 01:19:27 CEST 2011 - Sebastian Siebert <freespacer@gmx.de>

- remove patch file for Kernel 2.6.39 because is no longer required for 8.87
- add unsupported openSUSE Factory alias openSUSE 12.1 again
- backup files during removing fglrx package:
  - /etc/X11/xorg.conf -> /etc/X11/xorg.conf.fglrx-oldconfig
  - /etc/sysconfig/fglrxconfig -> /etc/sysconfig/fglrxconfig-oldconfig
  - /etc/X11/xorg.conf.fglrx-original-<n> -> /etc/X11/xorg.conf
    if the above file contains #NOXORGCONFEXISTED, remove safely both files.
- change the behaviour of recovering the configuration
  files by reinstallation:
  - if old configuration files exist either /etc/X11/xorg.conf.fglrx-oldconfig
    or /etc/X11/xorg.conf.fglrx-post, move it to /etc/X11/xorg.conf
  - if old configuration file /etc/sysconfig/fglrxconfig-oldconfig exists,
    move it to /etc/sysconfig/fglrxconfig

-------------------------------------------------------------------
Wed May 12 21:40:46 CEST 2011 - Sebastian Siebert <freespacer@gmx.de>

- fix version numbering in ati-packager.sh to solve an issue
  with package manager (for example: 8.85 -> 8.850)

-------------------------------------------------------------------
Wed May 11 19:33:44 CEST 2011 - Sebastian Siebert <freespacer@gmx.de>
